--- a/src/templates/videos/snippets/embed.html
+++ b/src/templates/videos/snippets/embed.html
@@ -1,11 +1,4 @@
-<video id="demo-player" controls data-video-url="{{ video_url }}" data-cloud-name="{{ cloud_name }}">
-</video>
-<script>
-    const videoPlayerElement = document.getElementById('demo-player')
-    if (videoPlayerElement) {
-        const cloudName = videoPlayerElement.dataset.cloudName
-        const videoUrl = videoPlayerElement.dataset.videoUrl
 
-        console.log(cloudName, videoUrl)
-    }
-</script>
+
+<video class= "demo-video" id="demo-player" controls data-cld-colors='{ "base": "{% if base_color %}{{ base_color }}{% else %}#0071ba{% endif %}", "accent": "#db8226", "text": "#fff" }' class="cld-video-player cld-video-player-skin-light" data-video-url="{{ video_url }}" data-cloud-name="{{ cloud_name }}">
+</video>
