modified the browser side views

--- a/src/templates/courses/lesson-coming-soon.html
+++ b/src/templates/courses/lesson-coming-soon.html
@@ -3,9 +3,7 @@
 {% block content %}
 <h1 class="text-purple-500 text-xl">{{ lesson_obj.title }}:</h1>
 <br/>
-<p>
-    {{ lesson_obj.description }}
+<p class="text-gray-400">
+    {{ lesson_obj.title }} is coming soon!
 </p>
-<br/>
-{{ video_embed }}
 {% endblock content %}
