--- a/src/templates/snippets/list-display.html
+++ b/src/templates/snippets/list-display.html
@@ -1,5 +1,5 @@
 <ul class="list-decimal">
     {% for obj in queryset %}
-    <li><a class="text-black hover:text-purple-500 hover:underline" href="{{ obj.get_absolute_path }}">{{ obj.title }}</a></li>
+    <li><a class="text-black hover:text-purple-500 hover:underline" href="{{ obj.get_absolute_path }}">{{ obj.title }}</a> {% if obj.is_coming_soon %}Coming Soon{% endif %}</li>
     {% endfor %}
 </ul>
